# Atulya-Office

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
atulya_office/: core.py
src/atulya_office/: cli.py  utils.py
